--- a/shell/angular.json
+++ b/shell/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "elements": {
+    "shell-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "build",
+            "outputPath": "dist/shell-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "elements:build"
+            "browserTarget": "shell-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "elements:build:production"
+              "browserTarget": "shell-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "elements:build"
+            "browserTarget": "shell-app:build"
           }
         },
         "test": {
@@ -95,7 +95,7 @@
         }
       }
     },
-    "elements-e2e": {
+    "shell-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,7 +103,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "elements:serve"
+            "devServerTarget": "shell-app:serve"
           }
         },
         "lint": {
@@ -118,5 +118,11 @@
       }
     }
   },
-  "defaultProject": "elements"
+  "defaultProject": "shell-app",
+  "schematics": {
+    "@schematics/angular:component": {
+
+      "styleext": "scss"
+    }
+  }
 }
