--- a/shell/package.json
+++ b/shell/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.4",
+    "@angular/cdk": "^6.2.1",
     "@angular/common": "^6.0.4",
     "@angular/compiler": "^6.0.4",
     "@angular/core": "^6.0.4",
     "@angular/forms": "^6.0.4",
     "@angular/http": "^6.0.4",
+    "@angular/material": "^6.2.1",
     "@angular/platform-browser": "^6.0.4",
     "@angular/platform-browser-dynamic": "^6.0.4",
     "@angular/router": "^6.0.4",
